[package]
name = "coherity"
version = "0.1.1"
edition = "2021"
authors = ["Ian Goodale", "J/A"]
description = "A package to assess the complexity of texts using a variety of readability formulas."
readme = "README.md"
repository = "https://github.com/archer884/coherity"
license = "GPL-3.0-or-later"
keywords = ["NLP", "readability"]
categories = ["text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3"
punkt = { version = "1.1.0", path = "../rust-punkt" }
unicode-segmentation = "1.12.0"
regex = "1"
itertools = "0.14.0"
