[package]
name = "coherity"
version = "0.1.1"
edition = "2021"
authors = ["Ian Goodale", "J/A"]
description = "A package to assess the complexity of texts using a variety of readability formulas."
readme = "README.md"
repository = "https://github.com/archer884/coherity"
license = "GPL-3.0-or-later"
keywords = ["NLP", "readability"]
categories = ["text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
punktoo = { git = "https://github.com/archer884/punktoo", version = "1.2.0" }
unicode-segmentation = "1.12.0"
